--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.1.3",
     "boardgame.io": "^0.50.2",
     "bootstrap": "^5.2.2",
+    "postcss-flexbugs-fixes": "^5.0.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
