--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "boardgame.io": "^0.50.2",
     "postcss-flexbugs-fixes": "^5.0.2",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
