--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
     "boardgame.io": "^0.50.2",
+    "esm": "^3.2.25",
     "postcss-flexbugs-fixes": "^5.0.2",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
@@ -25,7 +26,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "serve": "node -r esm src/components/Game/server.js"
   },
   "eslintConfig": {
     "extends": [
